--- a/BodyPongUnity/Assembly-CSharp-firstpass.csproj
+++ b/BodyPongUnity/Assembly-CSharp-firstpass.csproj
@@ -5,11 +5,11 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{5D284C6A-50A4-767D-7692-CBC8A9972EC8}</ProjectGuid>
+	<ProjectGuid>{1754C480-D783-CCCA-5AD8-CB22C45EC12C}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
-	<AssemblyName>Assembly-CSharp</AssemblyName>
+	<AssemblyName>Assembly-CSharp-firstpass</AssemblyName>
 	<TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
 	<FileAlignment>512</FileAlignment>
 	<BaseDirectory>Assets</BaseDirectory>
@@ -46,18 +46,10 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\BodyPongController.cs" />
-     <Compile Include="Assets\PhidgetTest.cs" />
-     <Compile Include="Assets\Scripts\BallController.cs" />
-     <Compile Include="Assets\Scripts\PlayerController.cs" />
-     <Compile Include="Assets\Scripts\phidgetDemo.cs" />
+     <Compile Include="Assets\Plugins\NotificationCenter.cs" />
  <Reference Include="Phidget21.NET">
  <HintPath>/Users/kathryn/Sites/AfterSchoolSpecial/BodyPongUnity/Assets/Plugins/Phidget21.NET.dll</HintPath>
  </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp-firstpass-vs.csproj">
-      <Project>{1754C480-D783-CCCA-5AD8-CB22C45EC12C}</Project>      <Name>Assembly-CSharp-firstpass-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
